game/fightme: Add rewards for user vs user

--- a/locales/cs/ui/games/fightme.json
+++ b/locales/cs/ui/games/fightme.json
@@ -6,6 +6,8 @@
       "title": "Čas trvání timeoutu",
       "help": "Sekundy"
     },
-    "bypassCooldownByOwnerAndMods": "Bypass cooldownu majitelem a moderátory"
+    "bypassCooldownByOwnerAndMods": "Bypass cooldownu majitelem a moderátory",
+    "winnerWillGet": "Kolik bodů bude přidáno při výhře",
+    "loserWillLose": "Kolik bodů bude ztraceno při prohře"
   }
 }
