--- a/locales/en/ui/games/fightme.json
+++ b/locales/en/ui/games/fightme.json
@@ -6,6 +6,8 @@
       "title": "Timeout duration",
       "help": "Seconds"
     },
-    "bypassCooldownByOwnerAndMods": "Bypass cooldown by owner and mods"
+    "bypassCooldownByOwnerAndMods": "Bypass cooldown by owner and mods",
+    "winnerWillGet": "How many points will be added on win",
+    "loserWillLose": "How many points will be lost on lose"
   }
 }
