game/roulette: Add rewards for game

--- a/locales/cs/ui/games/roulette.json
+++ b/locales/cs/ui/games/roulette.json
@@ -5,5 +5,7 @@
       "title": "Čas trvání timeoutu",
       "help": "Sekundy"
     }
-  }
+  },
+  "winnerWillGet": "Kolik bodů bude přidáno při výhře",
+  "loserWillLose": "Kolik bodů bude ztraceno při prohře"
 }
