--- a/locales/en/ui/games/roulette.json
+++ b/locales/en/ui/games/roulette.json
@@ -4,6 +4,8 @@
     "timeout": {
       "title": "Timeout duration",
       "help": "Seconds"
-    }
+    },
+    "winnerWillGet": "How many points will be added on win",
+    "loserWillLose": "How many points will be lost on lose"
   }
 }
