ui: Add missing locales

--- a/locales/cs/ui.systems.cooldown.json
+++ b/locales/cs/ui.systems.cooldown.json
@@ -1,4 +1,5 @@
 {
+  "new": "Nový Cooldown",
   "notify-as-whisper": "oznámit šepotem",
   "error": {
     "isEmpty": "Tato hodnota nesmí být prázdná"
