src: Add sub community gift support

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -278,6 +278,7 @@
       "raid": "tě <strong>raiduje</strong> s $viewers diváky",
       "sub": "ti dal <strong>sub</strong> | $tier",
       "subgift": "byl <strong>darován</strong> sub od $username",
+      "subcommunitygift": "<strong>daroval</strong> suby pro $count diváků",
       "resub": "ti dal <strong>resub</strong> $months měsíců | $tier",
       "cheer": "ti dal <strong>cheer</strong> $bits bitů",
       "tip": "ti dal <strong>tip</strong> $formatted_amount"
@@ -476,6 +477,7 @@
     "events-viewers-of-hosting": "diváků při hostingu",
     "overlays-eventlist-resub": "resub",
     "overlays-eventlist-subgift": "subgift",
+    "overlays-eventlist-subcommunitygift": "subcommunitygift",
     "overlays-eventlist-host": "host",
     "overlays-eventlist-sub": "sub",
     "overlays-eventlist-follow": "follow",
@@ -486,6 +488,7 @@
     "overlay-credits-show-hosts": "Zobrazit hosty",
     "overlay-credits-show-subscribers": "Zobrazit subscribery",
     "overlay-credits-show-subgifts": "Zobrazit subgifty",
+    "overlay-credits-show-subcommunitygifts": "Zobrazit suby darované komunitě",
     "overlay-credits-show-resubs": "Zobrazit resuby",
     "overlay-credits-show-cheers": "Zobrazit cheery",
     "overlay-credits-show-clips": "Zobrazit klipy",
@@ -501,6 +504,7 @@
     "overlay-credits-subscribed-by": "Subscribe od",
     "overlay-credits-resubscribed-by": "Resubscribe od",
     "overlay-credits-subgift-by": "Subgift od",
+    "overlay-credits-subcommunitygift-by": "Suby darované komunitě od",
     "overlay-credits-clipped-by": "Klip od",
     "overlay-credits-tip-by": "Tip od",
     "overlay-credits-social-facebook": "Facebook",
@@ -738,6 +742,7 @@
     "unfollow": "ztráta followera",
     "subscription": "nový subscription",
     "subgift": "nový subgift",
+    "subcommunitygift": "nový sub darovaný komunitě",
     "resub": "uživatel resubscribed",
     "command-send-x-times": "příkaz poslán x-krát",
     "keyword-send-x-times": "klíčové slovo posláno x-krát",
