--- a/locales/en.json
+++ b/locales/en.json
@@ -278,6 +278,7 @@
       "raid": "<strong>raided</strong> you with $viewers viewers",
       "sub": "<strong>subbed</strong> you | $tier",
       "subgift": "have <strong>gifted</strong> sub from $username",
+      "subcommunitygift": "have <strong>gifted</strong> subs for $count viewers",
       "resub": "<strong>resubbed</strong> you for $months months | $tier",
       "cheer": "<strong>cheered</strong> you for $bits bits",
       "tip": "<strong>tipped</strong> you for $formatted_amount"
@@ -476,6 +477,7 @@
     "events-viewers-of-hosting": "viewers of hosting",
     "overlays-eventlist-resub": "resub",
     "overlays-eventlist-subgift": "subgift",
+    "overlays-eventlist-subcommunitygift": "subcommunitygift",
     "overlays-eventlist-host": "host",
     "overlays-eventlist-sub": "sub",
     "overlays-eventlist-follow": "follow",
@@ -517,6 +519,7 @@
     "overlay-credits-show-hosts": "Show hosts",
     "overlay-credits-show-subscribers": "Show subscribers",
     "overlay-credits-show-subgifts": "Show subgifts",
+    "overlay-credits-show-subcommunitygifts": "Show subs given to community",
     "overlay-credits-show-resubs": "Show resubs",
     "overlay-credits-show-cheers": "Show cheers",
     "overlay-credits-show-clips": "Show clips",
@@ -532,6 +535,7 @@
     "overlay-credits-subscribed-by": "Subscribed by",
     "overlay-credits-resubscribed-by": "Resubscribed by",
     "overlay-credits-subgift-by": "Subgift by",
+    "overlay-credits-subcommunitygift-by": "Sub given to community by",
     "overlay-credits-clipped-by": "Clipped by",
     "overlay-credits-tip-by": "Tip by",
     "overlay-credits-social-facebook": "Facebook",
@@ -733,6 +737,7 @@
     "unfollow": "unfollow",
     "subscription": "new subscription",
     "subgift": "new subgift",
+    "subcommunitygift": "new sub given to community",
     "resub": "user resubscribed",
     "command-send-x-times": "command was send x times",
     "keyword-send-x-times": "keyword was send x times",
