ui/songs: Add volume and trim change

--- a/locales/cs/ui.systems.songs.json
+++ b/locales/cs/ui.systems.songs.json
@@ -11,8 +11,16 @@
     "playlist": "Přehrávání z playlistu",
     "notify": "Odeslat zprávu při změně skladby"
   },
+  "error": {
+    "isEmpty": "Tato hodnota nesmí být prázdná"
+  },
+  "startTime": "Začít skladbu v",
+  "endTime": "Ukončit skladbu v",
   "add_song": "Přidat píseň",
   "add_or_import": "Přidat skladbu nebo import ze seznamu skladeb",
   "importing": "Importuji",
-  "importing_done": "Importování Hotovo"
+  "importing_done": "Importování Hotovo",
+  "seconds": "Vteřiny",
+  "calculated": "Vypočítáno",
+  "set_manually": "Nastavit ručně"
 }
