--- a/locales/en/ui.systems.songs.json
+++ b/locales/en/ui.systems.songs.json
@@ -11,8 +11,16 @@
     "playlist": "Play from playlist",
     "notify": "Send message on song change"
   },
+  "error": {
+    "isEmpty": "This value cannot be empty"
+  },
+  "startTime": "Start song at",
+  "endTime": "End song at",
   "add_song": "Add song",
   "add_or_import": "Add song or import from playlist",
   "importing": "Importing",
-  "importing_done": "Importing Done"
+  "importing_done": "Importing Done",
+  "seconds": "Seconds",
+  "calculated": "Calculated",
+  "set_manually": "Set manually"
 }
