src/events: Add reset each message toggle for keyword-send-x-times

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -198,6 +198,11 @@
           "label": "Sledovat toto klíčové slovo",
           "placeholder": "Nastav klicoveSlovo"
         },
+        "resetCountEachMessage": {
+          "label": "Resetovat počet každou zprávu",
+          "true": "Resetovat počet",
+          "false": "Ponechat počet"
+        },
         "commandToWatch": {
           "label": "Sledovat tento příkaz",
           "placeholder": "Nastav !prikazKeSledovani"
