system/points: Add points per message for offline

--- a/locales/cs/ui.systems.points.json
+++ b/locales/cs/ui.systems.points.json
@@ -8,8 +8,10 @@
     "interval": "Minutový interval pro přidání bodů online uživatelům při online streamu",
     "offlineInterval": "Minutový interval pro přidání bodů online uživatelům při offline streamu",
     "messageInterval": "Kolik zpráv pro přidání body",
+    "messageOfflineInterval": "Kolik zpráv pro přidání body při offline streamu",
     "perInterval": "Kolik bodů přidat na online interval",
     "perOfflineInterval": "Kolik bodů přidat na offline interval",
-    "perMessageInterval": "Kolik bodů přidat na interval zpráv"
+    "perMessageInterval": "Kolik bodů přidat na interval zpráv",
+    "perMessageOfflineInterval": "Kolik bodů přidat na offline interval zpráv"
   }
 }
