--- a/locales/en/ui.systems.points.json
+++ b/locales/en/ui.systems.points.json
@@ -8,8 +8,10 @@
     "interval": "Minutes interval to add points to online users when stream online",
     "offlineInterval": "Minutes interval to add points to online users when stream offline",
     "messageInterval": "How many messages to add points",
+    "messageOfflineInterval": "How many messages to add points when stream offline",
     "perInterval": "How many points to add per online interval",
     "perOfflineInterval": "How many points to add per offline interval",
-    "perMessageInterval": "How many points to add per message interval"
+    "perMessageInterval": "How many points to add per message interval",
+    "perMessageOfflineInterval": "How many points to add per message offline interval"
   }
 }
