src/customvariables: Add response types for variable set

--- a/locales/cs/ui.registry.customvariables.json
+++ b/locales/cs/ui.registry.customvariables.json
@@ -1,4 +1,12 @@
 {
+  "response": {
+    "name": "Odpověď po nastavení",
+    "default": "Výchozí",
+    "default-placeholder": "Nastavte svou odpověď",
+    "default-help": "Použijte $value pro získání nové hodnoty proměnné",
+    "custom": "Vlastní",
+    "command": "Příkaz"
+  },
   "isReadOnly": "v chatu pouze pro čtení",
   "isNotReadOnly": "lze měnit prostřednictvím chatu",
   "no-variables-found": "Nebyly nalezeny žádné proměnné",
