system/commands: Add multiple responses for one command (UI)

--- a/locales/cs/ui.commons.json
+++ b/locales/cs/ui.commons.json
@@ -1,4 +1,6 @@
 {
   "never": "nikdy",
-  "reset": "resetovat"
+  "reset": "resetovat",
+  "moveUp": "posunout nahoru",
+  "moveDown": "posunout dolů"
 }
