--- a/locales/en/ui.commons.json
+++ b/locales/en/ui.commons.json
@@ -2,5 +2,7 @@
   "never": "never",
   "reset": "resetovat",
   "moveUp": "move up",
-  "moveDown": "move down"
+  "moveDown": "move down",
+  "stop-if-executed": "stop, if executed",
+  "continue-if-executed": "continue, if executed"
 }
