users: Move from username to id as primary key
Points, watched time, messages, tips are now ID
based, so should not be affected by username
changes

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -671,6 +671,7 @@
     "subscribed-since": "Subscriber od",
     "username": "Uživatelské jméno",
     "last-seen": "Naposledy viděn",
+    "date": "Data",
     "points": "Body",
     "calendar": "Kalendář",
     "stream-events": "Stream Eventy",
