--- a/locales/en.json
+++ b/locales/en.json
@@ -666,6 +666,7 @@
     "subscribed-since": "Subscribed since",
     "username": "Username",
     "last-seen": "Last Seen",
+    "date": "Date",
     "points": "Points",
     "calendar": "Calendar",
     "stream-events": "Stream Events",
