locale: Add missing add response locales
Closes #1315

--- a/locales/cs/ui.systems.customcommands.json
+++ b/locales/cs/ui.systems.customcommands.json
@@ -4,6 +4,7 @@
     "name": "vlastní příkaz",
     "placeholder": ""
   },
+  "addResponse": "Nová odpověď",
   "response": {
     "name": "odpověď",
     "placeholder": ""
