--- a/locales/cs.json
+++ b/locales/cs.json
@@ -371,7 +371,8 @@
         "latestTip": "Poslední Tip (uživatel)",
         "latestCheerAmount": "Poslední Cheer (počet)",
         "latestCheerMessage": "Poslední Cheer (zpráva)",
-        "latestCheer": "Poslední Cheer (uživatel)"
+        "latestCheer": "Poslední Cheer (uživatel)",
+        "version": "Bot version"
       }
     },
     "page-settings": {
