oauth: Add oauth settings into ui
Moved from config.json settings, while using refreshToken and accessToken
to properly refresh tokens

Closes #1107
Closes #1170

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -671,6 +671,9 @@
     "followed-since": "Follower od",
     "subscribed-since": "Subscriber od",
     "username": "Uživatelské jméno",
+    "accessToken": "AccessToken",
+    "refreshToken": "RefreshToken",
+    "scopes": "Scopes",
     "last-seen": "Naposledy viděn",
     "date": "Data",
     "points": "Body",
