--- a/locales/cs/ui.menu.json
+++ b/locales/cs/ui.menu.json
@@ -39,5 +39,6 @@
   "gamble": "Gamble",
   "roulette": "Roulette",
   "wheeloffortune": "Kolo štěstí",
-  "heist": "Heist"
+  "heist": "Heist",
+  "oauth": "OAuth"
 }
