--- a/locales/en.json
+++ b/locales/en.json
@@ -666,6 +666,9 @@
     "followed-since": "Followed since",
     "subscribed-since": "Subscribed since",
     "username": "Username",
+    "accessToken": "AccessToken",
+    "refreshToken": "RefreshToken",
+    "scopes": "Scopes",
     "last-seen": "Last Seen",
     "date": "Date",
     "points": "Points",
