--- a/locales/en/ui.menu.json
+++ b/locales/en/ui.menu.json
@@ -39,5 +39,6 @@
   "gamble": "Gamble",
   "roulette": "Roulette",
   "wheeloffortune": "Wheel of Fortune",
-  "heist": "Heist"
+  "heist": "Heist",
+  "oauth": "OAuth"
 }
