--- a/locales/en.json
+++ b/locales/en.json
@@ -899,14 +899,14 @@
       "remove": "Ouch, $amount $pointsName was removed from $username!"
     },
     "failed": {
-      "set": "{core.command-parse} !points set [username] [amount]",
-      "give": "{core.command-parse} !points give [username] [amount]",
+      "set": "{core.command-parse} $command [username] [amount]",
+      "give": "{core.command-parse} $command [username] [amount]",
       "giveNotEnough": "Sorry, $sender, you don't have $amount $pointsName to give it to $username",
-      "get": "{core.command-parse} !points get [username]",
-      "all": "{core.command-parse} !points all [amount]",
-      "rain": "{core.command-parse} !makeitrain [amount]",
-      "add": "{core.command-parse} !points add [username] [amount]",
-      "remove": "{core.command-parse} !points remove [username] [amount]"
+      "get": "{core.command-parse} $command [username]",
+      "all": "{core.command-parse} $command [amount]",
+      "rain": "{core.command-parse} $command [amount]",
+      "add": "{core.command-parse} $command [username] [amount]",
+      "remove": "{core.command-parse} $command [username] [amount]"
     },
     "defaults": {
       "pointsName": {
