customcommands: add response filters
PR #1463
IDEA https://ideas.sogebot.xyz/posts/77

--- a/locales/cs/ui.systems.customcommands.json
+++ b/locales/cs/ui.systems.customcommands.json
@@ -9,6 +9,10 @@
     "name": "odpověď",
     "placeholder": ""
   },
+  "filter": {
+    "name": "filter",
+    "placeholder": "Přidat filtr k této odpovědi"
+  },
   "forViewers": "pro diváky",
   "forRegulars": "pro pravidelné diváky",
   "forOwners": "pro vlastníka",
